cluster/core/traefik/traefik-ingressroute.yaml
# traefik-local-ingressroute
# traefik-metrics-local-ingressroute
# traefik-http-ingressroute
# traefik-https-ingressroute
# traefik-middleware-redirect-scheme
# traefik-middleware-basicauth
# traefik-middleware-headers
# traefik-middleware-authelia

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-local-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN_LOCAL_02}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics-local-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN_LOCAL_02}`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.${SECRET_DIGITALOCEAN_DOMAIN_02}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: traefik-middleware-redirect-scheme
      services:
        - name: api@internal
          kind: TraefikService

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DIGITALOCEAN_DOMAIN_02}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        # - name: traefik-middleware-basicauth
        # - name: traefik-middleware-headers
        # - name: authelia
        #   namespace: authentication-system
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-redirect-scheme
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-secret-basicauth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-headers
  namespace: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://traefik.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-authelia
  namespace: traefik
spec:
  forwardAuth:
    address: http://authentication-system-authelia.authentication-system.svc.cluster.local:9091/api/verify?rd=https://auth.${SECRET_DIGITALOCEAN_DOMAIN_02}
    trustForwardHeader: true
    authResponseHeaders:
      # - Remote-User
      # - Remote-Groups
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
